writing the model description

--- a/docs/model_description.ipynb
+++ b/docs/model_description.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPVH49b2e21CPDgih7qX6G2",
+      "authorship_tag": "ABX9TyM9Q4wOBI2lug4B6BzWmYjV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,15 @@
       "metadata": {
         "id": "x2UXl4UFzUbn"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pneRU9K6gxVf"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -174,6 +183,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The idea is that single neurons try to learn an optimal representation of the pre-synaptic inputs they receive. \n",
+        "\n",
+        "There might be different ways to optimally represent the pre-synaptic inputs, and different means to define an \"optimal\" description.\n",
+        "\n",
+        "**PRINCIPLE 1** \n",
+        "- Parsimonious representation\n",
+        "\n",
+        "**PRINCIPLE 2** \n",
+        "- Learning a dynamical model fo the pre-synaptic inputs\n",
+        "\n",
+        "**PRINCIPLE 3** \n",
+        "- Spiking activity as constraint on the dynamical representation (gives another type of sensitivity to timing in pre-synaptic inputs)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FijTtaKFYEdY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -181,6 +211,33 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Define a timestep `h` \n",
+        "\n",
+        "The dynamics of the membrane potential is described by the following recursive relation"
+      ],
+      "metadata": {
+        "id": "sN3faybig0Nl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$v_t = \\Big(1 - \\frac{h}{\\tau_m}\\Big)v_{t-1} \\equiv \\alpha v_{t-1}$"
+      ],
+      "metadata": {
+        "id": "0kWCBcB-gzLu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Pxr2pw9lhJFg"
+      }
     }
   ]
 }
